--- a/ToeicWeb/Areas/Admin/Views/AdminChat/Index.cshtml
+++ b/ToeicWeb/Areas/Admin/Views/AdminChat/Index.cshtml
@@ -1,7 +1,16 @@
-﻿<div id="user-list">
-    <!-- Danh sách người dùng -->
+﻿<div class="container">
+    <div class="row pt-4 pb-3 mx-2">
+        <div class="col-6">
+            <h1 class="text-primary">
+                Quản lý tin nhắn
+            </h1>
+        </div>
+        <hr class="mx-3" style="width:98%" />
+    </div>
+    <div id="user-list">
+        <!-- Danh sách người dùng -->
+    </div>
 </div>
-
 <div id="chat-container" style="display: none;">
     <div id="chat-box"></div>
     <input type="text" id="message-input" placeholder="Nhập tin nhắn..." />
