--- a/ToeicWeb/Areas/Admin/Views/Shared/_Layout.cshtml
+++ b/ToeicWeb/Areas/Admin/Views/Shared/_Layout.cshtml
@@ -338,7 +338,8 @@
                                 <!--begin:Menu link-->
                                 <span class="menu-link">
                                     <span class="menu-icon">
-                                        <i class="bi bi-backpack4" style="font-size: 18px">
+                                        <i class="bi bi-envelope-arrow-up " style="font-size: 18px">
+                                        
                                             <span class="path1"></span>
                                             <span class="path2"></span>
                                             <span class="path3"></span>
