--- a/ToeicWeb/Views/Shared/_Layout.cshtml
+++ b/ToeicWeb/Views/Shared/_Layout.cshtml
@@ -1,4 +1,5 @@
-﻿<!DOCTYPE html>
+﻿
+<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="utf-8" />
@@ -32,8 +33,11 @@
         </main>
     </div>
 
-    @await Html.PartialAsync("_ChatBot")
+    @if (User.IsInRole(SD.Role_Customer))
+    {
+        @await Html.PartialAsync("_ChatBot")
 
+    }
   
 
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
